--- a/webapp-helm/application.yaml
+++ b/webapp-helm/application.yaml
@@ -6,14 +6,14 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-repo/webapp-helm.git  # Change to your repo URL
+    repoURL: https://github.com/ugardi/demo_app_argoCD.git #https://github.com/your-repo/webapp-helm.git  # Change to your repo URL
     targetRevision: HEAD
     path: webapp-helm
     helm:
       values: |
         web:
           ingress:
-            host: webapp.192.168.1.1.nip.io  # Replace with your actual IP or domain
+            host: webapp.172.214.68.113.nip.io  # Replace with your actual IP or domain
   destination:
     server: https://kubernetes.default.svc
     namespace: default
