--- a/webapp-helm/values.yaml
+++ b/webapp-helm/values.yaml
@@ -6,7 +6,7 @@ web:
   serviceType: ClusterIP
   ingress:
     enabled: true
-    host: webapp.example.com  # Change this to your domain or use something like webapp.192.168.1.1.nip.io
+    host: webapp.172.214.68.113.nip.io #webapp.example.com  # Change this to your domain or use something like webapp.192.168.1.1.nip.io
     path: /
     className: "nginx"
 
