--- a/webapp-helm/.argocd/application.yaml
+++ b/webapp-helm/.argocd/application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: webapp
-  namespace: app
+  namespace: argocd
 spec:
   project: default
   source:
@@ -16,7 +16,7 @@ spec:
             host: webapp.172.214.68.113.nip.io  # Replace with your actual IP or domain
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: webapp
   syncPolicy:
     automated:
       prune: true
