--- a/webapp-1/.argocd/webapp-1.yaml
+++ b/webapp-1/.argocd/webapp-1.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: webapp
+  name: webapp-1
   namespace: argocd
 spec:
   project: default
