--- a/webapp-1/.argocd/webapp-1.yaml
+++ b/webapp-1/.argocd/webapp-1.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: webapp-1
+  name: webappa
   namespace: argocd
 spec:
   project: default
@@ -14,7 +14,7 @@ spec:
         web:
           ingress:
             hosts:
-              - host: webapp.yourdomain.com
+              - host:  webapp.172.214.68.113.nip.io  #webapp.yourdomain.com
                 paths:
                   - path: /
                     pathType: Prefix
