--- a/usermanagement/templates/db-init-job.yaml
+++ b/usermanagement/templates/db-init-job.yaml
@@ -10,7 +10,43 @@ spec:
       containers:
       - name: db-init
         image: postgres:13
-        command: ["psql", "-h", "postgres-service", "-U", "postgres", "-d", "userdb", "-c", "CREATE TABLE IF NOT EXISTS users (id SERIAL PRIMARY KEY, username VARCHAR(50) UNIQUE NOT NULL, password VARCHAR(255) NOT NULL, email VARCHAR(100));"]
+        command: 
+        - /bin/sh
+        - -c
+        - |
+          until pg_isready -h {{ .Release.Name }}-postgresql -U postgres; do
+            echo "Waiting for PostgreSQL to start..."
+            sleep 2
+          done
+          psql -h {{ .Release.Name }}-postgresql -U postgres -d {{ .Values.postgresql.auth.database }} -c "
+          CREATE TABLE IF NOT EXISTS users (
+            id SERIAL PRIMARY KEY,
+            username VARCHAR(50) UNIQUE NOT NULL,
+            password VARCHAR(255) NOT NULL,
+            email VARCHAR(100)
+          );"
         env:
         - name: PGPASSWORD
-          value: "postgres"
+          value: {{ .Values.postgresql.auth.password | quote }}
+
+
+
+
+
+
+
+# apiVersion: batch/v1
+# kind: Job
+# metadata:
+#   name: {{ .Chart.Name }}-db-init
+# spec:
+#   template:
+#     spec:
+#       restartPolicy: OnFailure
+#       containers:
+#       - name: db-init
+#         image: postgres:13
+#         command: ["psql", "-h", "postgres-service", "-U", "postgres", "-d", "userdb", "-c", "CREATE TABLE IF NOT EXISTS users (id SERIAL PRIMARY KEY, username VARCHAR(50) UNIQUE NOT NULL, password VARCHAR(255) NOT NULL, email VARCHAR(100));"]
+#         env:
+#         - name: PGPASSWORD
+#           value: "postgres"
