--- a/usermanagement/values.yaml
+++ b/usermanagement/values.yaml
@@ -1,31 +1,104 @@
 # user-management-app/helm/values.yaml
+
+# helm/values.yaml
 replicaCount: 1
 
 image:
-  repository: docker.io/ugardi/user-management-app #ugardi/user-management-app   # docker.io/ugardi/user-management-app:latest
+  repository: your-registry/user-management-app
   tag: latest
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
-service:
-  type: ClusterIP
-  port: 5000
+flask:
+  env: production
 
-ingress:
-  enabled: true
-  className: "nginx"
-  hosts:
-    - host: "app.172.214.68.113.nip.io"
-      paths:
-        - path: /
-          pathType: Prefix
-  tls: []
+resources:
+  requests:
+    cpu: 100m
+    memory: 128Mi
+  limits:
+    cpu: 500m
+    memory: 512Mi
 
 postgresql:
   enabled: true
-  global:
-    postgresql:
-      auth:
-        postgresPassword: "postgres"
-        username: "postgres"
-        password: "postgres"
-        database: "userdb"
+  fullnameOverride: "{{ .Release.Name }}-postgresql"
+  auth:
+    postgresPassword: "postgres"
+    username: "postgres"
+    password: "postgres"
+    database: "userdb"
+  persistence:
+    enabled: true
+    size: 1Gi
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# # helm/values.yaml
+# postgresql:
+#   enabled: true
+#   fullnameOverride: "{{ .Release.Name }}-postgresql"
+#   auth:
+#     postgresPassword: "postgres"
+#     username: "postgres"
+#     password: "postgres"
+#     database: "userdb"
+#   persistence:
+#     enabled: true
+#     size: 1Gi
+
+
+
+
+
+
+
+# replicaCount: 1
+
+# image:
+#   repository: docker.io/ugardi/user-management-app #ugardi/user-management-app   # docker.io/ugardi/user-management-app:latest
+#   tag: latest
+#   pullPolicy: Always
+
+# service:
+#   type: ClusterIP
+#   port: 5000
+
+# ingress:
+#   enabled: true
+#   className: "nginx"
+#   hosts:
+#     - host: "app.172.214.68.113.nip.io"
+#       paths:
+#         - path: /
+#           pathType: Prefix
+#   tls: []
+
+# postgresql:
+#   enabled: true
+#   global:
+#     postgresql:
+#       auth:
+#         postgresPassword: "postgres"
+#         username: "postgres"
+#         password: "postgres"
+#         database: "userdb"
