--- a/webapp-helm/templates/ingress.yaml
+++ b/webapp-helm/templates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: {{ .Values.web.ingress.className }}
   rules:
-  - host: webapp.{{ .Values.ingressPublicIp }}.nip.io   #{{ .Values.web.ingress.host }}
+  - host: webapp.{{ .Values.ingress_public_ip }}.nip.io   #{{ .Values.web.ingress.host }}
     http:
       paths:
       - path: {{ .Values.web.ingress.path }}
